[FIX] sidebar height & remove overflow:scroll, bc react-beautiful-dnd doesnt support nested scrolls

--- a/src/App.scss
+++ b/src/App.scss
@@ -34,8 +34,7 @@ button:focus, button:active  {
 }
 
 #sidebar {
-  height: 100vh;
-  overflow: scroll;
+  height: 100%;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
